// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`groupMultiselect (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Select a fruit
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can deselect an option 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><green>◼</fg> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><green>◼</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can select a group 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><green>◼</fg> group1
<cyan>│</fg>  │ <green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <green>◼</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold><dim>, </bold><dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can select a group by selecting all members 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><green>◼</fg> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><green>◼</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold><dim>, </bold><dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can select multiple options 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value2</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>│ </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value2</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=3>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value1
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value2</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold><dim>, </bold><dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > can submit empty selection when require = false 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > cursorAt sets initial selection 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><dim>◻</bold> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>└ </bold><green>◼</fg> group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
  <dim></bold><cyan>◻</fg> group1
  │ <cyan>◻</fg> <dim>group1value0</bold>
  └ <cyan>◻</fg> <dim>group1value1</bold>

",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "  <dim></bold><dim>◻</bold> <dim>group1</bold>
  <dim>│ </bold><cyan>◻</fg> group1value0
  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>

",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<erase.down>",
  "<green>◇</fg>  foo
  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > groupSpacing > negative spacing is ignored 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><green>◼</fg> <dim>group1</bold>
<cyan>│</fg>  <dim>└ </bold><green>◼</fg> group1value0
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > groupSpacing > renders spaced groups 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>
<cyan>│</fg>
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>
<cyan>│</fg>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=4>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>
<cyan>│</fg>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=4>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><green>◼</fg> <dim>group1</bold>
<cyan>│</fg>  <dim>└ </bold><green>◼</fg> group1value0
<cyan>│</fg>
<cyan>│</fg>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > initial values can be set 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <green>◼</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > renders error when nothing selected 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<yellow>▲</fg>  foo
<yellow>│</fg>  <dim></bold><cyan>◻</fg> group1
<yellow>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<yellow>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<yellow>└</fg>  <yellow>Please select at least one option.</fg>
   </><dim>Press <dim><bg:white>[7m space [27m</bg></fg> to select, <dim><bg:white>[7m enter [27m</bg></fg> to submit</bold></>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > renders message with options 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=5>",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > selectableGroups = false > cannot select groups 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold> <dim>group1</bold>
<cyan>│</fg>  <dim>  </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>  </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>  </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > selectableGroups = false > selecting all members of group does not select group 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold> <dim>group1</bold>
<cyan>│</fg>  <dim>  </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>  </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>  </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>  </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>  </bold><cyan>◻</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>  </bold><green>◼</fg> group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold><dim>, </bold><dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > values can be non-primitive 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> value0
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = false) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
  <dim></bold><cyan>◻</fg> group1
  │ <cyan>◻</fg> <dim>group1value0</bold>
  └ <cyan>◻</fg> <dim>group1value1</bold>

",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "  <dim></bold><dim>◻</bold> <dim>group1</bold>
  <dim>│ </bold><cyan>◻</fg> group1value0
  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>

",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<erase.down>",
  "<green>◇</fg>  foo
  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Select a fruit
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can deselect an option 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><green>◼</fg> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><green>◼</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can select a group 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><green>◼</fg> group1
<cyan>│</fg>  │ <green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <green>◼</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold><dim>, </bold><dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can select a group by selecting all members 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><green>◼</fg> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><green>◼</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold><dim>, </bold><dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can select multiple options 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value2</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>│ </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value2</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=4>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=3>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value1
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value2</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value1",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold><dim>, </bold><dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > can submit empty selection when require = false 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > cursorAt sets initial selection 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><dim>◻</bold> <dim>group1value0</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>└ </bold><green>◼</fg> group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
  <dim></bold><cyan>◻</fg> group1
  │ <cyan>◻</fg> <dim>group1value0</bold>
  └ <cyan>◻</fg> <dim>group1value1</bold>

",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "  <dim></bold><dim>◻</bold> <dim>group1</bold>
  <dim>│ </bold><cyan>◻</fg> group1value0
  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>

",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<erase.down>",
  "<green>◇</fg>  foo
  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > groupSpacing > negative spacing is ignored 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><green>◼</fg> <dim>group1</bold>
<cyan>│</fg>  <dim>└ </bold><green>◼</fg> group1value0
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > groupSpacing > renders spaced groups 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>
<cyan>│</fg>
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>
<cyan>│</fg>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=4>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>└ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>
<cyan>│</fg>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=4>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><green>◼</fg> <dim>group1</bold>
<cyan>│</fg>  <dim>└ </bold><green>◼</fg> group1value0
<cyan>│</fg>
<cyan>│</fg>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=11>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > initial values can be set 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <green>◼</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > renders error when nothing selected 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<yellow>▲</fg>  foo
<yellow>│</fg>  <dim></bold><cyan>◻</fg> group1
<yellow>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<yellow>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<yellow>└</fg>  <yellow>Please select at least one option.</fg>
   </><dim>Press <dim><bg:white>[7m space [27m</bg></fg> to select, <dim><bg:white>[7m enter [27m</bg></fg> to submit</bold></>
",
  "<cursor.backward count=999><cursor.up count=7>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > renders message with options 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>group1value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>group1value1</bold>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group2</bold>
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>group2value0</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=5>",
  "<cursor.backward count=999><cursor.up count=8>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > selectableGroups = false > cannot select groups 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold> <dim>group1</bold>
<cyan>│</fg>  <dim>  </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>  </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>  </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > selectableGroups = false > selecting all members of group does not select group 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold> <dim>group1</bold>
<cyan>│</fg>  <dim>  </bold><cyan>◻</fg> group1value0
<cyan>│</fg>  <dim>  </bold><dim>◻</bold> <dim>group1value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>  </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.down>",
  "<cyan>│</fg>  <dim>  </bold><green>◼</fg> <dim>group1value0</bold>
<cyan>│</fg>  <dim>  </bold><cyan>◻</fg> group1value1
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=4>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>  </bold><green>◼</fg> group1value1",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>group1value0</bold><dim>, </bold><dim>group1value1</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > values can be non-primitive 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim></bold><cyan>◻</fg> group1
<cyan>│</fg>  │ <cyan>◻</fg> <dim>value0</bold>
<cyan>│</fg>  └ <cyan>◻</fg> <dim>value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=2>",
  "<erase.down>",
  "<cyan>│</fg>  <dim></bold><dim>◻</bold> <dim>group1</bold>
<cyan>│</fg>  <dim>│ </bold><cyan>◻</fg> value0
<cyan>│</fg>  <dim>└ </bold><dim>◻</bold> <dim>value1</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=3>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>│ </bold><green>◼</fg> value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>value0</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`groupMultiselect (isCI = true) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
  <dim></bold><cyan>◻</fg> group1
  │ <cyan>◻</fg> <dim>group1value0</bold>
  └ <cyan>◻</fg> <dim>group1value1</bold>

",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "  <dim></bold><dim>◻</bold> <dim>group1</bold>
  <dim>│ </bold><cyan>◻</fg> group1value0
  <dim>└ </bold><dim>◻</bold> <dim>group1value1</bold>

",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "  <dim>│ </bold><green>◼</fg> group1value0",
  "<cursor.down count=3>",
  "<cursor.backward count=999><cursor.up count=5>",
  "<erase.down>",
  "<green>◇</fg>  foo
  <dim>group1value0</bold>",
  "
",
  "<cursor.show>",
]
`;
